--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>First Edition Auctions</title>
-    <link rel="stylesheet" href="/stylecss/html.css">
+    <link rel="stylesheet" href= html.css">      
 </head>
 <body>
     <h1>First Edition Auctions</h1>
